ежедневные задание и мобайл версия3

--- a/index.html
+++ b/index.html
@@ -854,6 +854,19 @@ button.upgrade-button:hover, button.hire-button:hover {
         width: 90%;
         left: 5%;
     }
+    #clanListMenu, #clanMenu {
+  display: none; 
+  position: fixed; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 20px;
+  border-radius: 5px; 
+  z-index: 1001; /* Убедитесь, что меню выше других элементов */
+  transform: scale(0.6); /* Уменьшить масштаб до 30% */
+}
 }
     </style>
 </head>
