доавил визуал улучшено

--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ button.skill-button[disabled]::before  {
 #skillButtonsContainer  img.skill-button:hover  { 
     transform:  scale(1.1);  
 } 
-button.skill-button.onCooldown {
+.onCooldown {
     opacity: 0.5; /*  Затемняем кнопку  */ 
 }
 
