доавил визуал улучшено

--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@ button.skill-button[disabled]::before  {
     transform:  scale(1.1);  
 } 
 .onCooldown {
-    opacity: 0.5; /*  Затемняем кнопку  */ 
+    opacity: 0.5!important; /*  Затемняем кнопку  */ 
 }
 
 button.skill-button.onCooldown::before, 
