--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ button.skill-button[disabled]::before  {
     opacity: 0.5!important; /*  Затемняем кнопку  */ 
 }
 
-button.skill-button.onCooldown::before, 
+.onCooldown::before, 
 #skillButtonsContainer img.skill-button.onCooldown::before  { 
     content:  '';  
     position: absolute; 
@@ -1081,7 +1081,7 @@ button.skill-button.onCooldown::before,
         <h2>Введите свой никнейм</h2>
         <input type="text" id="nicknameInput" placeholder="Ваш никнейм">
         <button id="startGameButton" onclick="startGame()">Начать игру</button> 
-        <div id="gameVersion">Версия игры: 2</div>
+        <div id="gameVersion">Версия игры: 1.15</div>
     </div>
     <canvas id="gameCanvas" style="display:none;"></canvas>
     <div id="bottomMenu" style="display:none;">
