доавил визуал улучшено

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@ button.skill-button[disabled]::before  {
 }
 
 .onCooldown::before, 
-#skillButtonsContainer img.skill-button.onCooldown::before  { 
+#skillButtonsContainer img.onCooldown::before  { 
     content:  '';  
     position: absolute; 
     top:  0;
