--- a/index.html
+++ b/index.html
@@ -38,10 +38,71 @@ body, html {
             background: #333;
             color: white;
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
             font-size: 18px;
         }
+        #bottomMenu div {
+  background: url('stone_texture.png'); /* Текстура камня */
+  border: 3px outset #b38f66; /* "Выпуклая" обводка под бронзу */
+  color: #f0f0f0;
+  padding: 10px 20px;
+  font-family: 'Cinzel', serif; /* Фэнтезийный шрифт */
+  font-size: 20px; 
+  margin: 0 5px; /* Отступы между кнопками */
+  cursor: pointer;
+  text-shadow: 2px 2px 3px black;
+  transition: all 0.3s ease;
+  display: flex;            /* Используем Flexbox для центрирования */
+  align-items: center;      /* Вертикальное центрирование */
+  justify-content: center;  /* Горизонтальное центрирование */
+  text-align: center;       /* Дополнительное центрирование текста */
+  flex-grow:  1;  /*  Добавляем  flex-grow  */
+}
+
+#bottomMenu div:hover {
+  transform: scale(1.1);
+  border-color: gold; /* Золотая обводка при наведении */
+  box-shadow: 0 0 15px gold; /* Золотое свечение при наведении */
+}
+
+#bottomMenu div:active {
+  transform: scale(0.95); /* Эффект нажатия */
+  box-shadow: inset 0 0 10px black; /* Эффект вдавленной кнопки */
+}
+
+#bottomMenu div:nth-child(1)::before { /* Иконка для арены */
+  content: "";
+  background: url('sword_icon.png') no-repeat center;
+  background-size: contain;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+#bottomMenu div:nth-child(2)::before { /* Иконка для подземелья */
+  content: "";
+  background: url('skull_icon.png') no-repeat center;
+  background-size: contain;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+#bottomMenu div:nth-child(3)::before { /* Иконка для рейда */
+  content: "";
+  background: url('flag_icon.png') no-repeat center;
+  background-size: contain;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  margin-right: 10px;
+  vertical-align: middle;
+}
         #characterMenu {
     position: fixed;
     top: 0px;
